force-app/main/default/objects/EmailMessage/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <formula>IF( 
CONTAINS(SUBSTITUTE(FromAddress , LEFT(FromAddress , FIND("@", FromAddress )), "") , $Setup.System_Configuration__c.Internal_Email__c)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Internal</label>
    <type>Checkbox</type>
</CustomField>