force-app/main/default/objects/EmailMessage/fields/Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Email__c</fullName>
    <formula>IF( 
CONTAINS(SUBSTITUTE(FromAddress , LEFT(FromAddress , FIND("@", FromAddress )), "") , $Setup.System_Configuration__c.Internal_Email__c) &amp;&amp;
CONTAINS(SUBSTITUTE(ToAddress , LEFT(ToAddress , FIND("@", ToAddress )), "") , $Setup.System_Configuration__c.Internal_Email__c)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Email</label>
    <type>Checkbox</type>
</CustomField>