force-app/main/default/objects/EmailMessage/fields/isMerge_Demerge__c.field-meta.xml
<CustomField>
    <fullName>isMerge_Demerge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag that used to identified the email record that created by merge / demerge purpose</description>
    <label>isMerge/Demerge</label>
    <type>Checkbox</type>
</CustomField>