force-app/main/default/objects/EmailMessage/fields/Original_Case__c.field-meta.xml
<CustomField>
    <fullName>Original_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>