force-app/main/default/objects/EmailMessage/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>SUBSTITUTE(FromAddress , LEFT(FromAddress , FIND("@", FromAddress)), "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <type>Text</type>
</CustomField>