force-app/main/default/objects/EmailMessage/fields/To_Internal__c.field-meta.xml
<CustomField>
    <fullName>To_Internal__c</fullName>
    <formula>IF( 
CONTAINS(SUBSTITUTE(ToAddress , LEFT(ToAddress , FIND("@", ToAddress )), "") , $Setup.System_Configuration__c.Internal_Email__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Internal</label>
    <type>Checkbox</type>
</CustomField>